--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -15,7 +15,7 @@
 
 		android:layout_marginBottom="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.1"
@@ -36,7 +36,7 @@
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.2"
@@ -54,7 +54,7 @@
 
 		android:layout_marginBottom="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.3"
@@ -71,7 +71,7 @@
 		android:layout_height="wrap_content"
 
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toBottomOf="parent"
@@ -92,7 +92,7 @@
 		android:layout_marginStart="16dp"
 		android:layout_marginEnd="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +110,7 @@
 		android:layout_height="wrap_content"
 
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintBottom_toBottomOf="parent"
@@ -129,7 +129,7 @@
 
 		android:layout_marginTop="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintDimensionRatio="h,1"
@@ -150,7 +150,7 @@
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintDimensionRatio="h,1"
@@ -168,7 +168,7 @@
 
 		android:layout_marginTop="16dp"
 		android:clickable="false"
-		android:onClick="change"
+		android:onClick="click"
 		android:text=""
 		android:textSize="50sp"
 		app:layout_constraintDimensionRatio="h,1"
