made this shitty app look beautiful! disabled screen rotation forcefully added 'about' button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,30 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:layout_gravity="center"
-	android:splitMotionEvents="false">
+	android:background="#171717"
+	android:padding="10dp"
+	android:splitMotionEvents="false"
+	android:visibility="visible">
 
 	<Button
 		android:id="@+id/button_1.1"
 		style="@style/Widget.AppCompat.Button.Colored"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 
 		android:layout_marginBottom="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.1"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_1.2"
@@ -38,11 +48,18 @@
 		android:layout_marginStart="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.2"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_1.3"
@@ -58,11 +75,18 @@
 		android:layout_height="wrap_content"
 
 		android:layout_marginBottom="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toTopOf="@+id/button_2.3"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -77,11 +101,18 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_2.2"
@@ -100,11 +131,18 @@
 
 		android:layout_marginStart="16dp"
 		android:layout_marginEnd="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_2.3"
@@ -120,11 +158,18 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -141,11 +186,18 @@
 		android:layout_height="wrap_content"
 
 		android:layout_marginTop="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_3.2"
 		app:layout_constraintHorizontal_bias="0.5"
@@ -164,11 +216,18 @@
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toStartOf="@+id/button_3.3"
 		app:layout_constraintHorizontal_bias="0.5"
@@ -184,11 +243,18 @@
 		android:layout_height="wrap_content"
 
 		android:layout_marginTop="16dp"
+		android:background="@drawable/main_button_dark"
+		android:backgroundTint="#595959"
 		android:clickable="false"
 		android:onClick="click"
+		android:padding="8dp"
+		android:shadowColor="#FFFFFF"
+		android:shadowDx="0"
+		android:shadowDy="0"
+		android:shadowRadius="50"
 		android:text=""
 		android:textSize="50sp"
-		android:visibility="gone"
+		android:visibility="visible"
 		app:layout_constraintDimensionRatio="h,1"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.5"
@@ -199,7 +265,7 @@
 
 	<Spinner
 		android:id="@+id/spinner"
-		style="@style/Widget.AppCompat.Spinner.DropDown"
+		style="@android:style/Widget.Material.Light.Spinner"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 
@@ -207,11 +273,14 @@
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="16dp"
+		android:backgroundTint="#393939"
 		android:textAlignment="center"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark"
 		app:layout_constraintBottom_toBottomOf="@+id/le_button"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/le_button"
-		app:layout_constraintTop_toTopOf="@+id/le_button" />
+		app:layout_constraintTop_toTopOf="@+id/le_button"
+		tools:visibility="visible" />
 
 	<Button
 		android:id="@+id/le_button"
@@ -219,13 +288,49 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
 		android:layout_marginBottom="16dp"
+		android:backgroundTint="#393939"
 		android:gravity="center"
 		android:onClick="start"
 		android:text="@string/start_label"
+		android:textColor="@color/colorAccent"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="@+id/button_3.2"
 		app:layout_constraintStart_toStartOf="@+id/button_3.2"
 		app:layout_constraintTop_toBottomOf="@+id/button_3.2"
 		app:layout_constraintVertical_bias="0.42000002" />
+
+	<ImageButton
+		android:id="@+id/imageButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="16dp"
+		android:layout_marginEnd="16dp"
+		android:background="#00FFFFFF"
+		android:onClick="revealInfo"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+	<TextView
+		android:id="@+id/about"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="16dp"
+		android:background="@drawable/about_textview_dark"
+		android:padding="10dp"
+		android:text="@string/about_text"
+		android:textAlignment="center"
+		android:textColor="#D8D8D8"
+		android:textSize="16sp"
+		android:visibility="gone"
+		app:layout_constraintBottom_toTopOf="@+id/button_1.2"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="1.0"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/imageButton"
+		app:layout_constraintVertical_bias="0.0"
+		tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
