--- a/app/src/main/res/layout/spinner_text.xml
+++ b/app/src/main/res/layout/spinner_text.xml
@@ -4,4 +4,5 @@
 	android:layout_width="40dp"
 	android:padding="5dp"
 	android:textSize="25sp"
+	android:textColor="@color/colorAccent"
 	android:textAlignment="center" />
