added a highlight to show the winning buttons added a text that shows what you are playing as, and who won greatly reduced code size of isWin function (formerly win())

--- a/app/src/main/res/drawable/main_button_dark.xml
+++ b/app/src/main/res/drawable/main_button_dark.xml
@@ -7,5 +7,5 @@
 		android:width="2dp"
 		android:color="@color/colorAccent" />
 	// set color and width of border
-	<solid android:color="#595959" />
+	<solid android:color="@color/playable_buttons_colour" />
 </shape>
