--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#393939</color>
-    <color name="colorPrimaryDark">#171717</color>
-    <color name="colorAccent">#8A8A8A</color>
-    <color name="color_X">#E46018</color>
-    <color name="color_O">#0091EA</color>
+	<color name="colorPrimary">#393939</color>
+	<color name="colorPrimaryDark">#171717</color>
+	<color name="colorAccent">#8A8A8A</color>
+	<color name="color_X">#E46018</color>
+	<color name="color_O">#0091EA</color>
+	<color name="playable_buttons_colour">#595959</color>
 </resources>
